--- a/Web-API/StudioBookingSystem/StudioBookingSystem.Repository/StudioBookingSystem.Repository.csproj
+++ b/Web-API/StudioBookingSystem/StudioBookingSystem.Repository/StudioBookingSystem.Repository.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StudioBookingSystem.Common\StudioBookingSystem.Common.csproj" />
+  </ItemGroup>
+
 </Project>
