--- a/Web-API/StudioBookingSystem/StudioBookingSystem/StudioBookingSystem.csproj
+++ b/Web-API/StudioBookingSystem/StudioBookingSystem/StudioBookingSystem.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StudioBookingSystem.Repository\StudioBookingSystem.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
