--- a/Web-API/StudioBookingSystem/StudioBookingSystem.Service/StudioBookingSystem.Service.csproj
+++ b/Web-API/StudioBookingSystem/StudioBookingSystem.Service/StudioBookingSystem.Service.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StudioBookingSystem.Common\StudioBookingSystem.Common.csproj" />
+    <ProjectReference Include="..\StudioBookingSystem.Repository\StudioBookingSystem.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
